<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Shipan Liu, Ludovico Ferrara, Minhua Liu, Rodolphe Loic Souassi Tatang and Daeun Jung
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  *  Last modified 25.07.23, 22:38
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wandering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/wandering"
            />

        <TextView
            android:id="@+id/wandering_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/wandering_total_time"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/jogging"
            />

        <TextView
            android:id="@+id/jogging_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/jogging_total_time"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/swimming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/swimming"
            />

        <TextView
            android:id="@+id/swimming_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/swimming_total_time"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ball_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/ball_sports"
            />

        <TextView
            android:id="@+id/ball_sports_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/ball_sports_total_time"/>
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/weight_training"
            />

        <TextView
            android:id="@+id/weight_training_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/weight_training_total_time"/>
    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yoga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/yoga"
            />

        <TextView
            android:id="@+id/yoga_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/yoga_total_time"/>
    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/climbing_bouldering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/climbing_bouldering"
            />

        <TextView
            android:id="@+id/climbing_bouldering_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/climbing_bouldering_total_time"/>
    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textSize="17sp"
            android:text="@string/ohters"
            />

        <TextView
            android:id="@+id/others_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/others_total_time"/>
    </LinearLayout>
</LinearLayout>