<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Shipan Liu, Ludovico Ferrara, Minhua Liu, Rodolphe Loic Souassi Tatang and Daeun Jung
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  *  Last modified 25.07.23, 22:38
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greeting_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/triathlon" />

            <Button
                android:id="@+id/buttonQuestionnaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:onClick="switchActivity"
                android:tag="Questionnaire"
                android:text="@string/questionnaire" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/health_coin_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/health_coin"
                    android:textSize="30sp"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:id="@+id/health_coin_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:hint="@string/health_coin_amount"/>

            </LinearLayout>


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/coin" />

            <TextView
                android:id="@+id/goal_setting_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:text="@string/goal_setting"
                android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Spinner
                android:id="@+id/sportSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp" />

            <EditText
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="number"/>

            <TextView
                android:id="@+id/goalSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_setting_min"
                android:textSize="17sp"/>

        </LinearLayout>

            <Button
                android:id="@+id/goal_setting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/goal_setting_btn" />

            <TextView
                android:id="@+id/sport_total_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:text="@string/sport_total_time"
                android:textSize="30sp" />

            <include layout="@layout/activity_main_group" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- nav bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/home"
                android:tag="MainActivity"
                android:onClick="switchActivity"
                android:src="@drawable/ic_home" />

            <ImageButton
                android:id="@+id/buttonTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/tracking"
                android:tag="Tracking"
                android:onClick="switchActivity"
                android:src="@drawable/ic_tracking" />

            <ImageButton
                android:id="@+id/buttonArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/archive"
                android:tag="Archive"
                android:onClick="switchActivity"
                android:src="@drawable/ic_archive" />

            <ImageButton
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/settings"
                android:tag="Settings"
                android:onClick="switchActivity"
                android:src="@drawable/ic_settings" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</LinearLayout>
