<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Shipan Liu, Ludovico Ferrara, Minhua Liu, Rodolphe Loic Souassi Tatang and Daeun Jung
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  *  Last modified 25.07.23, 22:38
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--gps switch-->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/gpsSwitch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:textSize="16sp"
                android:text="@string/gpsSwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>



            <!--notification button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_setNotification"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/set_notification_time"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- nav bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/home"
                android:minHeight="48dp"
                android:onClick="switchActivity"
                android:src="@drawable/ic_home"
                android:tag="MainActivity" />

            <ImageButton
                android:id="@+id/buttonTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/tracking"
                android:minHeight="48dp"
                android:onClick="switchActivity"
                android:src="@drawable/ic_tracking"
                android:tag="Tracking" />

            <ImageButton
                android:id="@+id/buttonArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/archive"
                android:minHeight="48dp"
                android:onClick="switchActivity"
                android:src="@drawable/ic_archive"
                android:tag="Archive" />

            <ImageButton
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:contentDescription="@string/settings"
                android:minHeight="48dp"
                android:onClick="switchActivity"
                android:src="@drawable/ic_settings"
                android:tag="Settings" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>