<!--
  ~ /**
  ~  * Created by Shipan Liu, Ludovico Ferrara, Minhua Liu, Rodolphe Loic Souassi Tatang and Daeun Jung
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  *  Last modified 25.07.23, 22:38
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ConsentActivity">

    <TextView
        android:id="@+id/privacyPolicyTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_consent_and_data_privacy_policy_agreement"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicyTitleTextView"
        app:layout_constraintBottom_toTopOf="@+id/consentCheckBox"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/privacyPolicyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </ScrollView>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/consentCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_500"
        android:text="@string/i_have_read_and_agree_to_fit_mood_s_user_consent_and_data_privacy_policy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toTopOf="@+id/continueButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accept_privacy_policy_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consentCheckBox"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
